# meta_hackathon

./: .gitignore  Dockerfile  Inference.py  README.md  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_output_format.py  test_results.txt
app/: environment.py  graders.py  main.py  models.py
data/contracts/: ma_hard.json  nda_easy.json  saas_medium.json
data/risk_labels/: ma_labels.json  nda_labels.json  saas_labels.json
environment/: env.py  models.py
environment/graders/: __init__.py  task1_nda.py  task2_saas.py  task3_ma.py
server/: Dockerfile  app.py  environment.py  graders.py
static/: index.html  script.js  style.css
