[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-contract-review"
version = "0.1.0"
description = "OpenEnv container for AI legal contract review testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app.main:main"
inference = "inference:main"


